--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,12 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -18,9 +23,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GettingMyLocationX">
         <service
-            android:name=".LocationService"
+            android:name=".AudioService"
             android:enabled="true"
             android:exported="true"></service>
+        <service
+            android:name=".LocationService"
+            android:enabled="true"
+            android:exported="true" />
 
         <activity android:name=".RecordsActivity" />
         <activity android:name=".MainActivity">
